--- a/_posts/2019-8-4-Dynamo.md
+++ b/_posts/2019-8-4-Dynamo.md
@@ -1,8 +1,35 @@
 ---
 layout: post
-title: Dynamo
-description: Give the brief here
+title: Turbulent Dynamos
+description: Applied to the Sun, stars, galaxies and galaxy clusters
 image:
 type: Research
 ---
 
+<p>My thesis work, under the supervision of Prof Kandaswamy Subramanian, is titled 
+<strong><i>Magnetic fields in the universe: Understanding their origin and evolution.</i></strong>
+Coherent magnetic fields are observed in stars, galaxies and galaxy clusters and influence important physical processes in these astrophysical systems.
+The origin of cosmic magnetic fields is thought to be the result of turbulent dynamos which convert kinetic energy of the fluid to magnetic energy.</p>
+<p>There are two kinds of turbulent dynamos.
+	<ul>
+		<li>Mean field (or large scale) dynamos : amplifies fields correlated on scales larger than the fluid stirring scale or the energy carrying scale</li>
+		<li>Fluctuation (or small scale) dynamos : amplifies fields correlated on scales smaller than the fluid stirring scale.</li>
+	</ul>
+Mean field dynamos are required to explain the large scale component of magnetic fields in systems like stars, spiral galaxies and accretion discs. In particular, fluctuation dynamos
+are generic, and operate with minimal requirements of the underlying fluid flow.
+</p>
+<p>In my thesis work, I investigated the turbulent dynamo theory and its applications both analytically and numerically.<br><br>
+<span style="color:khaki">Key results from my thesis:</span>
+<br>Extending Kazantsev's theory for small-scale dynamo (SSD) to include finite time correlation effect. 
+We solved this extended equation to find a reduced growth rate for the SSD but one which intriguingly preserves the magnetic power spectrum of the Kazantsev form.
+<br> <br>Using high resolution simulations, it was shown that SSD grown fields can help understand Faraday Rotation measures in galaxy clusters. This is because 
+as the SSD saturates, the magnetic integral scale grows from resistive scale to 1/4-1/3 of the velocity out eddy scale.
+<br><br>1024^3 simulations of helical dynamos at Pm=0.1 and Pm=10 show that a unified dynamo operates in kinematic regime. 
+This dynamo saturates at small scales and then at progressively at larger scales. As the small scale fields become increasingly coherent on saturation, 
+this averts the magnetic Reynolds number dependent quenching of the large-scale field. 
+</p>
+<p>
+<i><strong style="color:khaki">512^3, Pm=1 small-scale dynamo</strong></i>
+<br>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/L1ipplrC_rE?rel=0&controls=0&showinfo=0" frameborder="0" allowfullscreen></iframe>
+</p>
