--- a/_posts/2019-8-4-Dynamo.md
+++ b/_posts/2019-8-4-Dynamo.md
@@ -2,7 +2,7 @@
 layout: post
 title: Turbulent Dynamos
 description: Applied to the Sun, stars, galaxies and galaxy clusters
-image:
+image: assets/images/Dynamo1.png
 type: Research
 ---
 
@@ -32,4 +32,30 @@ this averts the magnetic Reynolds number dependent quenching of the large-scale 
 <i><strong style="color:khaki">512^3, Pm=1 small-scale dynamo</strong></i>
 <br>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/L1ipplrC_rE?rel=0&controls=0&showinfo=0" frameborder="0" allowfullscreen></iframe>
+</p>
+<p>
+<span style="color:khaki">Beyond PhD:</span><br>
+More recently, further investigation of helical dynamo simulations (with and without shear) has yielded 
+a novel result. We have identified a novel intermediate second stage of exponentially growing large-scale field, 
+different from that of the kinematic unified dynamo, due to a quasi-kinematic LSD. 
+The term 'quasi-kinematic' is to signify that this LSD action arises as the SSD saturates (indicating that the system has become nonlinear) 
+while the large-scale fields are possibly unaffected by the Lorentz force. This arises in a previously unidentified parameter regime, but one that is in
+fact expected to be generic in astrophysical systems. This important result, that a quasi-kinematic LSD can operate
+in large magnetic Reynolds number systems, alleviates the concern that large-scale fields are overwhelmed by rapidly growing small-scale fields in such systems.<br>
+We have just submitted it for publication.
+<br><br>
+<span >
+<div class="row">
+  <div class="column">
+    <img src="{{ site.baseurl }}/assets/images/Dynamo1.png" alt="" style="width:100%">
+  </div>
+  <div class="column">
+    <img src="{{ site.baseurl }}/assets/images/Dynamo2.png" alt="" style="width:100%">
+  </div>
+  <div class="column">
+    <img src="{{ site.baseurl }}/assets/images/Dynamo3.png" alt="" style="width:100%">
+  </div>
+  <i><strong style="color:khaki">The 512^3 helical dynamo growing fields on large scale as time evolves from left to right</strong></i>
+</div>
+</span>
 </p>
